--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "flickrapi": "^0.6.0",
     "morgan": "^1.8.1",
